--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Api testing by using Postman-newman
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   test-api:
     runs-on: ubuntu-latest
