--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Api testing by using Postman-newman
+name: Test-Build
 on:
   push:
     branches:
@@ -7,25 +7,37 @@ jobs:
   test-api:
     runs-on: ubuntu-latest
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+
+      # INstall Node on the runner
       - name: Install Node
         uses: actions/setup-node@v1
         with:
           node-version: "14.x"
+      # Install all dependencies
+      - name: install all dependencies
+        run: npm i 
+      # Install the newman command line utility and also install the html extra reporter
       - name: Install newman
         run: |
           npm install -g newman
           npm install -g newman-reporter-htmlextra
+       # Make directory to upload the test results
       - name: Make Directory for results
         run: mkdir -p testResults
+
+      # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          newman run "store.collection.json" -r htmlextra --reporter-htmlextra-export testResults/index.html
+          newman run "store.collection.json" -r htmlextra --reporter-htmlextra-export testResults/index.html 
+      # Upload the contents of Test Results directory to workspace
       - name: Output the run Details
         uses: actions/upload-artifact@v3
         if: always()
         with:
-          name: RunReport
+          name: RunReports
           path: ./testResults
       - name: Deploy to pages
         if: always()
