--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,22 +17,22 @@ jobs:
           port: 3000
           no-cache: false
           content-types: |
-          {
-            "appcache": "text/cache-manifest",
-            "css": "text/css",
-            "gif": "image/gif",
-            "html": "text/html",
-            "ico": "image/x-icon",
-            "jpeg": "image/jpeg",
-            "jpg": "image/jpeg",
-            "js": "text/javascript",
-            "json": "application/json",
-            "png": "image/png",
-            "txt": "text/plain",
-            "xml": "text/xml"
-          }
+            {
+              "appcache": "text/cache-manifest",
+              "css": "text/css",
+              "gif": "image/gif",
+              "html": "text/html",
+              "ico": "image/x-icon",
+              "jpeg": "image/jpeg",
+              "jpg": "image/jpeg",
+              "js": "text/javascript",
+              "json": "application/json",
+              "png": "image/png",
+              "txt": "text/plain",
+              "xml": "text/xml"
+            }
   
-        run: curl -vvvv http://localhost:3000/index.html
+      - run: curl -vvvv http://localhost:3000/index.html
 
 
       # INstall Node on the runner
