--- a/mockApi/db_stage.yaml
+++ b/mockApi/db_stage.yaml
@@ -109,3 +109,11 @@ users:
     signUpDate: 2019-08-24
     status: active
     level: consumer
+  - lastName: Olegtron
+    email: olegtron@gmail.com
+    dateOfBirth: 1993-02-05
+    emailVerified: false
+    signUpDate: 2022-09-16
+    status: active
+    level: god
+    id: 10
